test/typecheck/fail/enum_shadow.sail
default Order dec

enum X = {A, B, C}

enum Y = {A, D}
